; ModuleID = '/home/carl/AnghaBench/freebsd/sys/libkern/extr_strdup.c_strdup_flags.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/libkern/extr_strdup.c_strdup_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.malloc_type = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @strdup_flags(i8* %0, %struct.malloc_type* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.malloc_type*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store %struct.malloc_type* %1, %struct.malloc_type** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @strlen(i8* %10)
  %12 = add nsw i32 %11, 1
  %13 = sext i32 %12 to i64
  store i64 %13, i64* %8, align 8
  %14 = load i64, i64* %8, align 8
  %15 = load %struct.malloc_type*, %struct.malloc_type** %6, align 8
  %16 = load i32, i32* %7, align 4
  %17 = call i8* @malloc(i64 %14, %struct.malloc_type* %15, i32 %16)
  store i8* %17, i8** %9, align 8
  %18 = load i8*, i8** %9, align 8
  %19 = icmp eq i8* %18, null
  br i1 %19, label %20, label %21

20:                                               ; preds = %3
  store i8* null, i8** %4, align 8
  br label %27

21:                                               ; preds = %3
  %22 = load i8*, i8** %5, align 8
  %23 = load i8*, i8** %9, align 8
  %24 = load i64, i64* %8, align 8
  %25 = call i32 @bcopy(i8* %22, i8* %23, i64 %24)
  %26 = load i8*, i8** %9, align 8
  store i8* %26, i8** %4, align 8
  br label %27

27:                                               ; preds = %21, %20
  %28 = load i8*, i8** %4, align 8
  ret i8* %28
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i8* @malloc(i64, %struct.malloc_type*, i32) #1

declare dso_local i32 @bcopy(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
